[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "echoflow"
authors = [{name="Yajun", email="skyblueice234@gmail.com"}]
dynamic = ["version"]
description = "An open source framework for voice assistants compatible with Tenagent"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["voice", "ten"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "aiohttp~=3.11.12",
]

[project.urls]
Source = "https://github.com/yinyajun/echoflow"

[project.optional-dependencies]
anthropic = [ "anthropic~=0.49.0" ]
assemblyai = [ "assemblyai~=0.37.0" ]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pipecat" = ["py.typed"]


[tool.setuptools_scm]
local_scheme = "no-local-version"
fallback_version = "0.0.0-dev"

